--- a/src/movie-list.css
+++ b/src/movie-list.css
@@ -1,4 +1,5 @@
 .movie-list {
+
   margin-top: 2em;
   padding-top: 1em;
   display: grid;
@@ -25,13 +26,25 @@
 }
 
 .overlay {
-  position: absolute;
+  /* position: absolute; */
   background: rgb(0, 0, 0, 0.8);
   width: 100%;
-  transition: 0.5 ease;
+  transition: 1s ease;
   opacity: 0;
   bottom: 0;
   font-size: 20px;
   padding: 10px;
   text-align: center;
+}
+
+@media (max-width: 600px) {
+  .movie-list {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 1080px) {
+  .movie-list {
+    grid-template-columns: 2fr;
+  }
 }
