--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700;6..96,900&display=swap');
+
 :root {
   font-family: 'Roboto';
   line-height: 1.5;
@@ -14,6 +16,8 @@
   box-sizing: border-box;
   margin: 0;
 }
+
+
 
 a {
   font-weight: 500;
@@ -35,6 +39,8 @@ a:hover {
 h1 {
   font-size: 4em;
   line-height: 1.1;
+  font-family: 'Bodoni Moda', serif;
+  font-weight: 900;
 }
 
 /* button {
